--- a/api.css
+++ b/api.css
@@ -13,6 +13,13 @@ button:hover {
 
 .nav {
 	text-align: center;
+	font-family: 'Special Elite', cursive;
+	font-size: 1.875em;
+
+}
+
+.strong{
+	font-family:'Fredericka the Great', cursive;
 }
 
 main {
