--- a/api.css
+++ b/api.css
@@ -56,9 +56,9 @@ button {
  
 }
 
-h2{
-font-family:'Fredericka the Great', cursive;
-font-size: 40px;
+h2 {
+	font-family:'Fredericka the Great', cursive;
+	font-size: 40px;
 }
 
 .persisted{
@@ -66,8 +66,8 @@ font-size: 40px;
 	font-family: 'Waiting for the Sunrise', cursive;
 	color: #cce0da;
 }
-li
-{
+
+li {
 	text-align: center;
 	list-style: none;
 	margin: 10px;
