--- a/api.css
+++ b/api.css
@@ -3,10 +3,6 @@
 	background: #f2f2f2;
 }
 
-title{
-	
-}
-
 button:hover {
   cursor: pointer;
 }
@@ -58,7 +54,7 @@ button {
 
 h2 {
 	font-family:'Fredericka the Great', cursive;
-	font-size: 40px;
+	font-size: 3em;
 }
 
 .persisted{
@@ -76,12 +72,20 @@ li {
 }
 /*break-point*/
 
-@media only screen and (min-width: 640px) {
+@media only screen and (max-width: 500px) {
 
-   {
-    /* do something to
-    over-ride default settings*/
-  }
+.nav {
+	width: 100%;
+}
+
+h2 {
+	font-size: 3em;
+	width: 100%;
+}
+main
+{
+	display: block;
+}
 }
 
 @media only screen and (min-width: 800px) {
